# todolist-pythonbasic

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
todo_list/: __main__.py  config.py
todo_list/api/: api.py
todo_list/db/: create_database.sql
todo_list/dtos/: todo_dto.py
todo_list/infra/: health_check.py  mariadb.py  routers.py
todo_list/models/: todo.py
todo_list/repositorys/: database.py
todo_list/services/: todo_services.py
