[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Jorel Magatti <jorel_dev@hotmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
starlette = "^0.27.0"
logging = "^0.4.9.6"
ecs-logging = "^2.1.0"
prometheus-fastapi-instrumentator = "^6.1.0"
sqlalchemy = "^2.0.20"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
